Add abstract, goal, introduction

--- a/Sablona_BP_UTF-8.tex
+++ b/Sablona_BP_UTF-8.tex
@@ -110,7 +110,9 @@ jeho zabezpečení, zahrnující například vzdálený přístup.
 
 \chapter[Analýza]{Analýza a návrh}
 
-V této kapitole provedeme analýzu požadavků a návrh včetně zdůvodnění všech rozhodnutí. \cite{BS86}
+V této kapitole provedeme analýzu požadavků a návrh včetně zdůvodnění všech rozhodnutí. \cite{efficient_resources}
+\cite{newcombe_2012}
+\cite{efficient_resources}
 
 \section{Analýza}
 
