--- a/mybibliographyfile.bib
+++ b/mybibliographyfile.bib
@@ -1,39 +1,16 @@
-@MANUAL{svgspec,
-    title = "Scalable Vector Graphics (SVG) 1.1 Specification {[online]}",
-    organization = "WWW Consorcium",
-    url = "http://www.w3.org/TR/2003/REC-SVG11-20030114/",
-    note = "[cit. 2011-07-07]",
-    key = "svg"
+@book{newcombe_2012,
+    title={Securing Cloud Services: A Pragmatic Approach to Security Architecture in the Cloud},
+    publisher={IT Governance Ltd.},
+    author={Newcombe, Lee},
+    year={2012}
 }
 
-@INBOOK{kobltypo,
-	title = "Praktick{\' a} typografie",
-	author = "Pavel Ko{\v c}i{\v c}ka and Filip Bla{\v z}ek",
-	publisher = "Brno: Computer Press",
-	year = "2004"
-}
-
-@BOOK{rybicka,
-	title = "LaTeX pro za\v c\'ate\v cn\'\i{}ky",
-	author = "Ji{\v r}{\' i} Rybi{\v c}ka",
-	isbn = "80-7302-049-1",
-	publisher = "Brno: Konvoj",
-	edition = "3"
-}
-
-@MANUAL{iso690,
-	organization = "\'U\v rad pro technickou normalizaci, metrologii a st\'atn\'\i{} zku\v sebnictv\'\i{}",
-	title = "\v CSN ISO 690 Informace a dokumentace -- Pravidla pro bibliografick\'e odkazy a citace informa\v cn\'\i{}ch zdroj{\r u}",
-	year = "2011"
-}
-
-
-@ARTICLE {sitova-karta-s-fpga-xilinx,
-    title  = "Síťová karta s FPGA Xilinx pro 1 a 10GbE",
-    journal = "V: Pandatron - elektrotechnický magazín {[online]}",
-    howpublished = "[online]",
-    month  = "červen",
-    year   = "2013",
-    note = "[cit. 2015-10-31]",
-    url    = "http://pandatron.cz/?2939&sitova_karta_s_fpga_xilinx_pro_1_a_10gbe"
+@INPROCEEDINGS{efficient_resources,
+    author={D. {Martin} and A. v. {Moorsel} and G. {Morgan}},
+    booktitle={2008 11th IEEE International Symposium on Object and Component-Oriented Real-Time Distributed Computing (ISORC)},
+    title={Efficient Resource Management for Game Server Hosting},
+    year={2008},
+    volume={},
+    number={},
+    pages={593-596},
 }
