--- a/mybibliographyfile.bib
+++ b/mybibliographyfile.bib
@@ -13,4 +13,19 @@
     volume={},
     number={},
     pages={593-596},
+    url={https://ieeexplore.ieee.org/document/4553340},
+    urldate={2020-04-20}
 }
+
+@INPROCEEDINGS{building_cloud_mog_server,
+    author={K. {Chanthaphram} and others},
+    booktitle={The 2013 10th International Joint Conference on Computer Science and Software Engineering (JCSSE)},
+    title={Building a cloud-based MOG game server},
+    year={2013},
+    volume={},
+    number={},
+    pages={143-148},
+    url={https://ieeexplore.ieee.org/document/6567335},
+    urldate={2020-04-20}
+}
+
