Add Conclusion, version for second moodle task

--- a/Sablona_BP_UTF-8.tex
+++ b/Sablona_BP_UTF-8.tex
@@ -200,7 +200,23 @@ Prozkoumám dostupná řešení automatické instalace herních serverů. Jejich
 \chapter{Realizace}
 
 \begin{conclusion}
-	%sem napište závěr Vaší práce
+    Výsledkem této práce je obraz systému, který je vhodný pro rychlé nasazení herního serveru v cloudu.
+    Vhodná volba základní distribuce mi umožnila vytvořit jednoduchý a snadno rozšiřitelný systém,
+    který je vhodný zejména pro uživatele bez pokročilých technických znalostí.
+
+    Díky použité aplikaci pro správu herních serverů je možné používat systém pro velké množství populárních her.
+    Vytvořené skripty se starají o jejich automatickou instalaci a počáteční nastavení, celý systém je tak
+    možné provozovat v cloudu s minimální uživatleskou interakcí.
+
+    Systém automaticky po spuštění přenastaví administrátorské heslo a přístupové klíče, aby zamezil vstupu
+    nepovolaných osob. Pro stahování herních serverů využívá výhradně zabezpečených protokolů.
+    Tím je zajištěna bezpečnost proti základním typům útoků.
+
+    Obraz je zveřejněný na webové stránce, kde je také k dispozici návod k jeho použití v angličtině.
+    Je možné jednoduše přidat podporu pro další herní servery bez nutnosti zásahu do systému pomocí externích skriptů.
+
+    V případě dalšího vývoje je možné systém rozšířit o pokročilé sledování stavu herního serveru a jeho
+    podrobnou uživatelskou konfiguraci.
 \end{conclusion}
 
 % \bibliographystyle{csn690}
