--- a/mybibliographyfile.bib
+++ b/mybibliographyfile.bib
@@ -2,7 +2,8 @@
     title={Securing Cloud Services: A Pragmatic Approach to Security Architecture in the Cloud},
     publisher={IT Governance Ltd.},
     author={Newcombe, Lee},
-    year={2012}
+    year={2012},
+    isbn={978-1-84928-397-7}
 }
 
 @INPROCEEDINGS{efficient_resources,
@@ -29,3 +30,11 @@
     urldate={2020-04-20}
 }
 
+@INPROCEEDINGS{statista_cloud_revenue,
+    booktitle={Statista},
+    title={Public cloud application services (SaaS) market size worldwide 2015-2022}, 
+    url={https://www.statista.com/statistics/505243/worldwide-software-as-a-service-revenue/}, 
+    author={Holst, Arne}, 
+    year={2019}, 
+    urldate={2020-04-20}
+}
