Remove old files

--- a/BP_Jesina_Matyas_2020.tex
+++ b/BP_Jesina_Matyas_2020.tex
@@ -11,7 +11,7 @@
 % english thesis in English language
 % hidelinks remove colour boxes around hyperlinks
 
-\documentclass[thesis=B,czech]{FITthesis}[2019/12/23]
+\documentclass[thesis=B,czech]{template/FITthesis}[2019/12/23]
 
 % \usepackage{amsmath} %advanced maths
 % \usepackage{amssymb} %additional math symbols
@@ -27,8 +27,7 @@
 \newcommand{\cotg}{\mathop{\mathrm{cotg}}} %cesky cotangens
 
 \usepackage[style=iso-numeric,backend=biber]{biblatex}
-\addbibresource{mybibliographyfile.bib}
-\addbibresource{ref.bib}
+\addbibresource{bibliography.bib}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % ODTUD DAL VSE ZMENTE
